Inicio da implementação de paginação.
Refactoring do MapperInterface.toCollection(Page page)

Refactoring CozinhaRepository agora estende JpaSpecificationExecutor