@@ -5,13 +5,13 @@ import org.springframework.data.domain.Page;
 import java.util.Collection;
 import java.util.stream.Collectors;
 
-public interface MapperInterface<RESPONSEMODEL,INPUTMODEL, ENTITY> {
+public interface MapperInterface<RESPONSEMODEL, INPUTMODEL, ENTITY> {
 
     RESPONSEMODEL toResponseModel(ENTITY entity);
 
     ENTITY toEntity(INPUTMODEL inputmodel);
 
-    void updateEntity (INPUTMODEL inputmodel, ENTITY entity);
+    void updateEntity(INPUTMODEL inputmodel, ENTITY entity);
 
     default Page<RESPONSEMODEL> toPage(Page<ENTITY> page) {
         return page.map(this::toResponseModel);
@@ -19,11 +19,14 @@ public interface MapperInterface<RESPONSEMODEL,INPUTMODEL, ENTITY> {
 
 
     default Collection<RESPONSEMODEL> toCollection(Page<ENTITY> page) {
-        return page.stream()
-                .toList()
-                .stream()
-                .map(this::toResponseModel)
-                .collect(Collectors.toList());
+
+        return this.toCollection(page.getContent());
+
+//        return page.stream()
+//                .toList()
+//                .stream()
+//                .map(this::toResponseModel)
+//                .collect(Collectors.toList());
     }
 
 
